--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,17 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiosignal==1.4.0
 alembic==1.16.5
+attrs==25.3.0
 bcrypt==4.3.0
 bidict==0.23.1
 blinker==1.9.0
+certifi==2025.8.3
+cffi==2.0.0
+charset-normalizer==3.4.3
 click==8.3.0
 colorama==0.4.6
+cryptography==46.0.1
 dnspython==2.8.0
 eventlet==0.40.3
 Flask==3.1.2
@@ -11,20 +19,32 @@ Flask-Bcrypt==1.0.1
 Flask-Migrate==4.1.0
 Flask-SocketIO==5.5.1
 Flask-SQLAlchemy==3.1.1
+frozenlist==1.7.0
 greenlet==3.2.4
 gunicorn==23.0.0
 h11==0.16.0
+http_ece==1.2.1
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 Mako==1.3.10
 MarkupSafe==3.0.2
+multidict==6.6.4
 packaging==25.0
+propcache==0.3.2
 psycopg2-binary==2.9.10
+py-vapid==1.9.2
+pycparser==2.23
 python-dotenv==1.1.1
 python-engineio==4.12.2
 python-socketio==5.13.0
+pywebpush==2.0.3
+requests==2.32.5
 simple-websocket==1.1.0
+six==1.17.0
 SQLAlchemy==2.0.43
 typing_extensions==4.15.0
+urllib3==2.5.0
 Werkzeug==3.1.3
 wsproto==1.2.0
+yarl==1.20.1
